add devise profile

--- a/app/javascript/stylesheets/layouts/navbar.scss
+++ b/app/javascript/stylesheets/layouts/navbar.scss
@@ -8,8 +8,9 @@
     background-size: 114px;
   }
   &__mainLogo {
+    background-image: url("../images/coollogo_com-25632357");
     background-repeat: no-repeat;
-    
+
   }
   &-nav {
     & > li {
