--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 @import "layouts/navbar";
+
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+
+@import "common";
+@import "users/devise";
+
+@import "users/show";
+@import "users/edit";
