--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Training</title>
+    <title>Fitness</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -13,10 +15,21 @@
   </head>
 
   <body>
-    <%= render 'partial/navbar' %>
+    <div id="wrapper">
+      <%= render 'partial/navbar' if current_user %>
 
+      <% if flash[:notice] %>
+      <div class="alert alert-info"><%= flash[:notice] %></div>
+      <% end %>
+      <% if flash[:alert] %>
+      <div class="alert alert-danger"><%= flash[:alert] %>
+      </div>
+      <% end %>
 
-    <%= yield %>
-    
+      <div class="container">
+      <%= yield %>
+      </div>
+      <%= render 'partial/footer' %>
+    </div>
   </body>
 </html>
