--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <%= link_to "TraiinigFit", root_path, class: "navbar__brand navbar__mainLogo" %>
+    <%= link_to "", root_path, class: "navbar__brand navbar__mainLogo" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">
+      </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-md-auto align-items-center">
@@ -11,7 +12,9 @@
           <%= link_to "投稿", "#", class: "btn btn-primary" %>
         </li>
         <li>
-          <%= link_to "", "#", class: "nav-link commonNavIcon" %>
+          <%= link_to user_path(current_user), class: "nav-link commonNavIcon profile-icon",method: :get do%>
+          <i class="fas fa-user fa-2x"></i>
+          <% end %>
         </li>
       </ul>
     </div>
