--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-md-auto align-items-center">
         <li>
-          <%= link_to "投稿", "#", class: "btn btn-primary" %>
+          <%= link_to "投稿", new_post_path, class: "btn btn-primary" %>
         </li>
         <li>
-          <%= link_to user_path(current_user), class: "nav-link commonNavIcon profile-icon",method: :get do%>
+          <%= link_to user_path(current_user), class: "nav-link commonNavIcon profile-icon",method: :get do %>
           <i class="fas fa-user fa-2x"></i>
           <% end %>
         </li>
