--- a/app/javascript/stylesheets/posts.scss
+++ b/app/javascript/stylesheets/posts.scss
@@ -22,6 +22,7 @@
 }
 
 .love {
+  background-image: url("~parts5");
   background-repeat: no-repeat;
   height: 36px;
   width: 36px;
@@ -77,4 +78,19 @@
   display: flex;
   align-items: center;
   line-height: 0;
+}
+
+.loved {
+  background-image: url("~parts7");
+  background-repeat: no-repeat;
+  height: 36px;
+  width: 36px;
+  background-size: 36px !important;
+}
+
+.hide-text {
+  display: block;
+  overflow: hidden;
+  text-indent: 110%;
+  white-space: nowrap;
 }
