--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,14 +23,26 @@
 
         <div class="card-body">
           <div class="row parts">
-            <%= link_to "#", class: "love", method: :get do %>
-            <i class="far fa-heart fa-2x"></i>
-            <% end %>
+
+            <div id="like-icon-post-<%= post.id.to_s %>">
+              <% if post.liked_by(current_user).present? %>
+                <%= link_to "いいねを取り消す", post_like_path(post.id, post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                <i class="far fa-heart"></i>
+              <% else %>
+                <%= link_to "いいね", post_likes_path(post), method: :POST, remote: true, class: "love hide-text" %>
+                <i class="fas fa-heart"></i>
+              <% end %>
+            </div>
+
             <%= link_to "#", class: "comment", method: :get do %>
             <i class="far fa-comment fa-2x"></i>
             <% end %>
           </div>
-          <div><strong>「いいね！」10件</strong></div>
+
+          <div id="like-text-post-<%= post.id.to_s %>">
+            <%= render "like_text", { likes: post.likes } %>
+          </div>
+
           <div>
             <span><strong><%= post.user.name %></strong></span>
             <span><%= post.caption %></span>
